tests/typecheck/bad/fun-not-allowed-to-use-underscore2.scilexp
let apply =
  fun (_ : Int32 -> Int32) =>
  fun (x : Int32) =>
    _ x
in apply
